--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,7 +28,7 @@ section .sidebar {
   border-bottom: 1px solid #eee;
 }
 section .sidebar {
-  padding: 0px 10px 0 10px; 
+  padding: 0 10px 0 10px; 
   background: white;
   border-radius: 5px;
   margin-bottom: 25px;
@@ -49,13 +49,6 @@ section .sidebar li p {
   font-size: 12px;
 }
 
-section .sidebar li.active a,
-section .sidebar li.active a:hover  {
-  color: darkblue;
-  background-color: lightblue;
-  border-radius: 3px;
-}
-
 section .sidebar a {
   color:#131392;
   cursor:pointer;
@@ -65,6 +58,14 @@ section .sidebar a {
 
 section .sidebar a:hover {
   color: rgb(50, 50, 180);
+}
+
+section .sidebar li.active a,
+section .sidebar li.active a:hover  {
+  color: darkblue;
+  background-color: lightblue;
+  border-radius: 3px;
+  text-shadow: rgba(109, 91, 141, 0.4) 0 0 0;
 }
 
 .blog-post h1 {
@@ -93,7 +94,7 @@ section .sidebar a:hover {
 
 .about-me section {
   padding     :  5px;
-  margin-left :  0px;
+  margin-left :  0;
   font-family :  Helvetica, arial, freesans, clean, sans-serif;
   font-size   :  14px;
   line-height :  1.6;
@@ -105,7 +106,6 @@ section .sidebar a:hover {
 .about-me li {
   padding: 5px;
   margin: 5px;
-  height: 50px;
 }
 .about-me .stackoverflow img,
  section li.stackoverflow img {
@@ -120,7 +120,7 @@ section .sidebar a:hover {
   background     :  antiqueWhite;
   width          :  159px;
   padding-top    :  6px;
-  padding-bottom :  0px;
+  padding-bottom :  0;
   margin-left    :  10px;
 }
 .about-me .wordpress img {
