--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,7 +20,10 @@ nav .avatar {
 
 nav .main {
   padding-top: 20px;
-  padding-left: 10px;
+}
+
+.navbar-inverse .brand, .navbar-inverse .nav > li > a.active {
+  color: white;
 }
 
 nav h1.offset3 {
@@ -60,11 +63,8 @@ section .sidebar a {
   text-decoration:none;
 }
 
-section .sidebar a:hover {
-  background-color: #1B1B1B;
-}
-
 section .sidebar li.active a,
+section .sidebar li a:hover,
 section .sidebar li.active a:hover  {
   color: white;
   background-color: inherit;
