--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,6 +142,10 @@ section .sidebar li.active a:hover  {
 }
 
 
+.github ul li {
+  margin: 30px 0 30px 0;
+}
+
 .github .btn {
   float: right;
   height: 15px;
