--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -8,9 +8,9 @@
 {{/each}}
 
 <!-- google analytics -->
-<script type="text/javascript" charset="utf-8">
-    var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-32151587-3']);
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38583213-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
