--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,10 +8,10 @@
   <div class="wrapper">
     <nav class="navbar navbar-inverse row">
       <div class="navbar-inner">
-          <div class="span avatar">
+          <div class="span2 avatar">
             <img src="/img/avatar.jpg">
           </div>
-          <div class="offset4 row">
+          <div class="offset3 row">
             <div>
               <h1>Thorsten Lorenz</h1>
               <a href="/feed" class="feed span1"></a>
