--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -2,6 +2,7 @@
 <title>thlorenz.com</title>
 <meta http-equiv="content-type" content="text/html" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="fragment" content="!">
 
 {{#each styles}}
   <link rel="stylesheet" href="/css/{{ this }}" type="text/css" media="screen" charset="utf-8"0>
