--- a/views/sitemap.hbs
+++ b/views/sitemap.hbs
@@ -6,23 +6,31 @@
 
   <url>
     <loc>http://thlorenz.com/about/me</loc>
+    <priority>0.9</priority>
   </url>
   <url>
     <loc>http://thlorenz.com/feed</loc>
   </url>
   <url>
     <loc>http://thlorenz.com/projects/github</loc>
+    <priority>0.5</priority>
+    <changefreq>daily</changefreq>
   </url>
 
   {{#each projects}}
     <url>
       <loc>http://thlorenz.com{{{this}}}</loc>
+      <changefreq>yearly</changefreq>
+      <priority>0.2</priority>
     </url>
   {{/each}}
 
   {{#each blogposts}}
     <url>
-    <loc>http://thlorenz.com/blog/{{{this}}}</loc>
+      <loc>http://thlorenz.com/blog/{{{this.name}}}</loc>
+      <changefreq>monthly</changefreq>
+      <lastmod>{{{this.updated}}}</lastmod>
+      <priority>0.8</priority>
     </url>
   {{/each}}
 
