--- a/views/partials/about-me.hbs
+++ b/views/partials/about-me.hbs
@@ -3,7 +3,7 @@
   <ul class="span3">
     <!-- twitter-->
     <li>
-      <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/follow_button.1347008535.html#_=1348414196784&amp;dnt=true&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=thl0&amp;show_count=false&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button" style="width: 191px; height: 20px; " title="Twitter Follow Button" data-twttr-rendered="true"></iframe>
+      <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/follow_button.1347008535.html#_=1348414196784&amp;dnt=true&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=thlorenz&amp;show_count=false&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button" style="width: 191px; height: 20px; " title="Twitter Follow Button" data-twttr-rendered="true"></iframe>
     </li>
 
     <!-- github -->
